# actix-nacos-demo

./: Cargo.toml  Dockerfile  config  log.yml
src/: main.rs
src/resource/: application.yaml
