[package]
name = "actix-nacos-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nacos_rust_client = "0.2.0"
actix-web = "4.1.0"
serde = "1.0.144"
serde_json = "1.0.85"
log = "0.4.17"
config = "0.13.2"
log4rs = "1.0.0"